--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-# some more
+# Logs and databases #
+######################
 *.log
-.DS_Store
+*.sql
+*.sqlite
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
